update index page

--- a/assets/css/jorani-1.0.css
+++ b/assets/css/jorani-1.0.css
@@ -103,3 +103,14 @@ a,
 .badge-info {
     background: #459a1d;
 }
+.fc .fc-button-group > * {
+    float: left;
+    margin: 0 5px 0 -1px !important;
+	background: #459a1d;
+    border-color: #459a1d;
+    color: white;
+}
+.fc .fc-toolbar > * > * {    
+    margin-left: -0.1em !important;
+	
+}
